--- a/css/index.css
+++ b/css/index.css
@@ -36,3 +36,28 @@ canvas {
 	font-size: normal;
 	margin: 0;
 }
+
+#unitHealthContainer {
+	padding: 0;
+	margin: 0;
+
+	display: block;
+	position: relative; <!-- allows this to be the anchor for #unitHealth's position -->
+
+	background-color: gray;
+	border: 2px solid black;
+	width: 100px;
+	height: 15px;
+}
+
+#unitHealth {
+	background-color: red;
+
+	position: absolute;
+	display: inline-block;
+	top: 0px;
+	left: 0px;
+
+	width: 100px;
+	height: 15px;
+}
